traefik/ingressRoute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route
  namespace: example-ns
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`test.domain.com`)
    services:
    - name: example-svc
      port: 80
  tls:
    secretName: certificate-secret
